manifests/approuter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recylone-approuter
  name: recylone-approuter
  namespace: recyclone-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recylone-approuter
  template:
    metadata:
      namespace: recyclone-dev
      labels:
        app: recylone-approuter
    spec:
      containers:
        - image: sapse/approuter:13.1.1
          imagePullPolicy: IfNotPresent
          name: approuter
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: "/app/default-env.json"
              name: default-env
              subPath: default-env.json
              readOnly: true
            - mountPath: "/app/xs-app.json"
              name: approuter-config
              subPath: xs-app.json
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: default-env
          secret:
            secretName: default-env
        - name: approuter-config
          configMap:
            name: approuter-config
