manifests/request-manage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recylone-request-manage-service
  name: recylone-request-manage-service
  namespace: recyclone-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recylone-request-manage-service
  template:
    metadata:
      namespace: recyclone-dev
      labels:
        app: recylone-request-manage-service
    spec:
      containers:
        - image: gourabsap/request-manage-service:0.0.3
          imagePullPolicy: IfNotPresent
          name: request-manage-service
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "100m"
      volumes:
        - name: db-secret
          secret:
            secretName: db-secret
