manifests/approuter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recylone-approuter
  namespace: recyclone-dev
spec:
  selector:
    app: recylone-approuter
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
