manifests/vendor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recylone-vendor-service
  namespace: recyclone-dev
spec:
  selector:
    app: recylone-vendor-service
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
